--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </nav>
     <h1 class="mt-5">Number classification</h1>
-    <form action="/">
+    <form action="/cgi-bin/result.py">
       <div class="mt-5 row justify-content-between">
 
         <div class="col col-lg-10">
